<resources>
    <string name="app_name" translatable="false">MADESubmission</string>

    <string name="title_favorite" translatable="false">Favorite</string>

    <string name="menu_explore">Explore</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorite">Favorite</string>

    <string name="about">About</string>
    <string name="release_date">Release date</string>
    <string name="genre" translatable="false">Genre</string>
    <string name="platforms">Platforms</string>
    <string name="developers">Developers</string>
    <string name="publishers">Publishers</string>
    <string name="screenshots">Screenshots</string>
    <string name="no_screenshots_available">No screenshots available!</string>
    <string name="rating_heading">Rating</string>

    <string name="action_settings">Settings</string>

    <string name="search_hint">Search games</string>
    <string name="no_games_found">No games found. Please try with a different query!</string>
    <string name="recent_search">Recent search</string>
    <string name="no_recent_search">You don\'t have any recent search!</string>
    <string name="delete_recent_search_confirmation">Do you want to delete %1$s from search history?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Preference Titles -->
    <string name="language_header">Languages</string>
    <string name="history_header">History</string>

    <string name="clear_search_history_title">Clear search history</string>
    <string name="clear_history_confirmation">Are you sure to clear your search history?</string>
    <string name="history_cleared">Search history is cleared!</string>
</resources>