<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.madesubmission.ui.explore.ExploreFragment"
        android:label="@string/menu_explore"
        tools:layout="@layout/fragment_explore" >
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.madesubmission.favorites.ui.FavoriteFragment"
        android:label="@string/menu_favorite"
        app:moduleName="favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.madesubmission.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_list" />
</navigation>