<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.detail.DetailActivity"
    tools:showIn="@layout/activity_detail"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/game_title"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/big"
            android:layout_marginTop="@dimen/small"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Seal Online " />

        <TextView
            android:id="@+id/about_heading"
            style="@style/SectionHeading"
            android:text="@string/about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_title" />

        <TextView
            android:id="@+id/game_desc"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/big"
            android:layout_marginTop="@dimen/small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_heading"
            tools:text="SUPPORTED DEVICES iOS 5.1.1 or later is required. Square Enix’s fresh-faced hit The New York Times called “one of the best role playing games ever designed for anything” has busted onto iOS in a big way, with a slick and addictive new combat system, eye-popping HD art, and (of course) plenty of zetta " />

        <TextView
            android:id="@+id/release_heading"
            style="@style/MetaHeading"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/small"
            android:text="@string/release_date"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/game_desc"
            app:layout_constraintTop_toBottomOf="@+id/game_desc" />

        <TextView
            android:id="@+id/game_released"
            style="@style/MetaInfo"
            android:layout_marginEnd="@dimen/small"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/release_heading"
            app:layout_constraintTop_toBottomOf="@+id/release_heading"
            tools:text="December 12, 2019" />

        <TextView
            android:id="@+id/rating_heading"
            style="@style/MetaHeading"
            android:layout_marginStart="@dimen/small"
            android:layout_marginTop="8dp"
            android:text="@string/rating_heading"
            app:layout_constraintEnd_toEndOf="@+id/game_desc"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/game_desc" />

        <TextView
            android:id="@+id/rating"
            style="@style/MetaInfo"
            app:layout_constraintStart_toStartOf="@+id/rating_heading"
            app:layout_constraintTop_toBottomOf="@+id/rating_heading"
            tools:text="5.0" />

        <TextView
            android:id="@+id/platform_heading"
            style="@style/MetaHeading"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/small"
            android:text="@string/platforms"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/release_heading"
            app:layout_constraintTop_toBottomOf="@+id/rating" />

        <TextView
            android:id="@+id/game_platforms"
            style="@style/MetaInfo"
            android:layout_marginEnd="@dimen/small"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/platform_heading"
            app:layout_constraintTop_toBottomOf="@+id/platform_heading"
            tools:text="PC, Xbox One, Nintento Switch" />

        <TextView
            android:id="@+id/genre_heading"
            style="@style/MetaHeading"
            android:layout_marginStart="@dimen/small"
            android:layout_marginTop="@dimen/small"
            android:text="@string/genre"
            app:layout_constraintEnd_toEndOf="@+id/game_desc"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/rating" />

        <TextView
            android:id="@+id/game_genres"
            style="@style/MetaInfo"
            app:layout_constraintEnd_toEndOf="@+id/game_desc"
            app:layout_constraintStart_toStartOf="@+id/genre_heading"
            app:layout_constraintTop_toBottomOf="@+id/genre_heading"
            tools:text="Horror, Comedy" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="game_platforms,game_genres" />

        <TextView
            android:id="@+id/developer_heading"
            style="@style/MetaHeading"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/small"
            android:text="@string/developers"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/platform_heading"
            app:layout_constraintTop_toBottomOf="@+id/barrier" />

        <TextView
            android:id="@+id/game_developers"
            style="@style/MetaInfo"
            android:layout_marginEnd="@dimen/small"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/developer_heading"
            app:layout_constraintTop_toBottomOf="@+id/developer_heading"
            tools:text="Square Enix" />

        <TextView
            android:id="@+id/publisher_heading"
            style="@style/MetaHeading"
            android:layout_marginTop="@dimen/small"
            android:text="@string/publishers"
            app:layout_constraintEnd_toEndOf="@+id/game_desc"
            app:layout_constraintStart_toStartOf="@+id/genre_heading"
            app:layout_constraintTop_toBottomOf="@+id/barrier" />

        <TextView
            android:id="@+id/game_publishers"
            style="@style/MetaInfo"
            app:layout_constraintEnd_toEndOf="@+id/game_desc"
            app:layout_constraintStart_toStartOf="@+id/publisher_heading"
            app:layout_constraintTop_toBottomOf="@+id/publisher_heading"
            tools:text="EA" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="game_developers,game_publishers" />

        <TextView
            android:id="@+id/screenshot_heading"
            style="@style/SectionHeading"
            android:text="@string/screenshots"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier_2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/screenshot_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big"
            android:layout_marginBottom="@dimen/big"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/screenshot_heading" />

        <TextView
            android:id="@+id/no_screenshots"
            style="@style/ErrorText"
            android:text="@string/no_screenshots_available"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/screenshot_heading" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>